WIP position:fixed on mobiles

--- a/main.css
+++ b/main.css
@@ -10,6 +10,7 @@ body {
     background: url(images/body\ background.jpg) no-repeat center fixed;
     background-size: cover;
     position: relative;
+    transform: translateZ(0);
     -webkit-transform: translateZ(0);
 }
 
